--- a/trunk/web/home.xhtml
+++ b/trunk/web/home.xhtml
@@ -35,68 +35,72 @@
                 <ice:form>
 
                     <h2>Hoy:</h2>
-                    <ice:panelGroup rendered="#{usuario.reunionhoy!=null}">
-                        <ice:panelGroup>
-                            <table>
-                                <tr>
-                                    <td colspan="1">
+                        <ice:panelGroup rendered="#{usuario.reunionhoy!=null}">
+                            <ice:panelGroup>
+                                <table>
+                                    <tr>
+                                        <td colspan="1">
 
-                                        <ice:outputText value="Fecha: " ></ice:outputText>
-                                        <ice:outputText value="#{usuario.formatoFecha(usuario.reunionhoy.fechainicial)}" ></ice:outputText>
-                                    </td>
-                                    <td colspan="3">
-                                        <ice:outputText value="Sala: " />
-                                        <ice:outputText value="#{usuario.reunionhoy.idsalareunion.nombresala} - " />
-                                        <ice:outputText value="#{usuario.reunionhoy.idsalareunion.direccion} - " />
-                                        <ice:outputText value="#{usuario.reunionhoy.idsalareunion.localidad} (#{usuario.reunionhoy.idsalareunion.provincia}) - " />
-                                        <ice:outputText value="#{usuario.reunionhoy.idsalareunion.pais} " />
-                                    </td>
-                                </tr> 
-                                <tr>
-                                    <td colspan="1">
-                                        <ice:outputText value="Duración: " />
-                                        <ice:outputText value="#{usuario.calcularDuracionReunion()}"></ice:outputText>
-                                    </td>
-                                    <td colspan="3">
-                                        <ice:outputText value="Solicitante: " />
-                                        <ice:outputText value="#{usuario.reunionhoy.dnicreador.nombre} " />
-                                        <ice:outputText value="#{usuario.reunionhoy.dnicreador.apellido1} " />
-                                        <ice:outputText value="#{usuario.reunionhoy.dnicreador.apellido2} - " />
-                                        <ice:outputText value="#{usuario.reunionhoy.dnicreador.nif.razonsocial}" />
-                                    </td>
-                                </tr> 
-                                <tr>
-                                    <td colspan="2">
-                                        <ice:outputText value="Asistentes: " />
-                                    </td>
-                                    <td colspan="2">
-                                        <ice:outputText value="Puntos del día: " /><br/>   
-                                    </td>
-                                </tr>
+                                            <ice:outputText value="Fecha: " ></ice:outputText>
+                                            <ice:outputText value="#{usuario.formatoFecha(usuario.reunionhoy.fechainicial)}" ></ice:outputText>
+                                        </td>
+                                        <td colspan="3">
+                                            <ice:outputText value="Sala: " />
+                                            <ice:outputText value="#{usuario.reunionhoy.idsalareunion.nombresala} - " />
+                                            <ice:outputText value="#{usuario.reunionhoy.idsalareunion.direccion} - " />
+                                            <ice:outputText value="#{usuario.reunionhoy.idsalareunion.localidad} (#{usuario.reunionhoy.idsalareunion.provincia}) - " />
+                                            <ice:outputText value="#{usuario.reunionhoy.idsalareunion.pais} " />
+                                        </td>
+                                    </tr> 
+                                    <tr>
+                                        <td colspan="1">
+                                            <ice:outputText value="Duración: " />
+                                            <ice:outputText value="#{usuario.calcularDuracionReunion()}"></ice:outputText>
+                                        </td>
+                                        <td colspan="3">
+                                            <ice:outputText value="Solicitante: " />
+                                            <ice:outputText value="#{usuario.reunionhoy.dnicreador.nombre} " />
+                                            <ice:outputText value="#{usuario.reunionhoy.dnicreador.apellido1} " />
+                                            <ice:outputText value="#{usuario.reunionhoy.dnicreador.apellido2} - " />
+                                            <ice:outputText value="#{usuario.reunionhoy.dnicreador.nif.razonsocial}" />
+                                        </td>
+                                    </tr> 
+                                    <tr>
+                                        <td colspan="2">
+                                            <ice:outputText value="Asistentes: " />
+                                        </td>
+                                        <td colspan="2">
+                                            <ice:outputText value="Puntos del día: " /><br/>   
+                                        </td>
+                                    </tr>
 
-                                <tr>
-                                    <td colspan="2">
-                                        <ice:panelSeries varStatus="u" var="usuarios" value="#{usuario.reunionhoy.asistenciareunionCollection}">
-                                            <ice:outputText value="- #{usuarios.dni.nombre} " />
-                                            <ice:outputText value="#{usuarios.dni.apellido1} " />
-                                            <ice:outputText value="#{usuarios.dni.apellido2}" /><br/>
-                                        </ice:panelSeries>
-                                    </td>
-                                    <td colspan="2">
-                                        <ice:panelSeries varStatus="p" var="puntosdia" value="#{usuario.reunionhoy.puntosdeldiaCollection}">
-                                            <ice:outputText value="#{p.index+1}.- #{puntosdia.titulopunto}" /><br/>
-                                        </ice:panelSeries>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2">
-                                        <ice:commandButton rendered="#{usuario.reunionhoy.dnicreador.dni == usuario.dni}" disabled="#{usuario.activarBotonComenzarReunion()}" value="Empezar Reunion"/>
-                                    </td>
+                                    <tr>
+                                        <td colspan="2">
+                                            <ice:panelSeries varStatus="u" var="usuarios" value="#{usuario.reunionhoy.asistenciareunionCollection}">
+                                                <ice:outputText value="- #{usuarios.dni.nombre} " />
+                                                <ice:outputText value="#{usuarios.dni.apellido1} " />
+                                                <ice:outputText value="#{usuarios.dni.apellido2}" /><br/>
+                                            </ice:panelSeries>
+                                        </td>
+                                        <td colspan="2">
+                                            <ice:panelSeries varStatus="p" var="puntosdia" value="#{usuario.reunionhoy.puntosdeldiaCollection}">
+                                                <ice:outputText value="#{p.index+1}.- #{puntosdia.titulopunto}" /><br/>
+                                            </ice:panelSeries>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <ice:commandButton rendered="#{usuario.reunionhoy.dnicreador.dni == usuario.dni}" action="#{usuario.comenzarReunion}" disabled="#{usuario.activarBotonComenzarReunion()}" value="Empezar Reunion"/>
+                                        </td>
+                                        <td colspan="2">
+                                            <ice:outputText rendered="#{usuario.falloinicioreunion}" styleClass="errorformulario" value="#{usuario.falloinicioreunionstr}"/>
+                                        </td>
 
-                                </tr>
-                            </table>
+                                    </tr>
+                                </table>
+                            </ice:panelGroup>
                         </ice:panelGroup>
-                    </ice:panelGroup>
+                    
 
                     <h2>Próximas reuniones:</h2>
                     <ice:panelSeries  varStatus="indice" var="reunion" value="#{usuario.proximasreuniones}">
@@ -159,7 +163,7 @@
 
 
                     </ice:panelSeries>
-                    
+
                     <ice:outputText styleClass="error" rendered="#{usuario.reunionhoy==null}" value="No tiene reuniones para hoy"/>
                 </ice:form>
             </ui:define>
