--- a/web/desarrolloreunion.xhtml
+++ b/web/desarrolloreunion.xhtml
@@ -73,6 +73,7 @@
                     </div>
                     <script type="text/javascript">
                        diferenciarestante();
+                       contador();
                     </script>
 
 
