--- a/trunk/web/desarrolloreunion.xhtml
+++ b/trunk/web/desarrolloreunion.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:ice="http://www.icesoft.com/icefaces/component"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html">
 
     <body>
 
@@ -17,7 +18,7 @@
                 <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==0 or privilegiosBean.compruebaPrivilegiosSesion()==1 or privilegiosBean.compruebaPrivilegiosSesion()==2  }">
                     #{usuario.creaDesarrolloReunion()}
                 </c:if>
-                
+
             </ui:define>
 
             <ui:define name="title">
@@ -40,7 +41,7 @@
             <ui:define name="content">
                 <ice:form>
 
-                    
+
                 </ice:form>
 
                 <ice:form styleClass="form-inline">
@@ -71,6 +72,31 @@
 
 
                     </div>
+
+
+                    <ice:dataTable var="asistentes" value="#{desarrolloReunionBean.usuariosasistentesconf}" styleClass="table table-bordered table-striped" >
+                        <ice:column>
+                            <f:facet name="header">Nombre</f:facet>
+                            <ice:outputText styleClass="nombreasist" value="#{asistentes.nombre}" />   
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">Apellido 1</f:facet>
+                            <ice:outputText styleClass="apellido1asist" value="#{asistentes.apellido1}" /> 
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">Apellido 2</f:facet>    
+                            <ice:outputText styleClass="apellido2asist" value="#{asistentes.apellido2}" />
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">Salario</f:facet>    
+                            <ice:outputText styleClass="apellido2asist" value="#{asistentes.salario}" />
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">Coste</f:facet>
+                            <ice:outputText styleClass="apellido2asist" value="0€" />
+                        </ice:column>
+
+                    </ice:dataTable>
                     <script type="text/javascript">
                        diferenciarestante();
                        contador();
