--- a/web/viewcalendar.xhtml
+++ b/web/viewcalendar.xhtml
@@ -13,8 +13,9 @@
                 <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==0 or privilegiosBean.compruebaPrivilegiosSesion()==1 or privilegiosBean.compruebaPrivilegiosSesion()==2  }">
                     #{usuario.creaCalendarioUsuarioBean()}
                 </c:if>
+                <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
             </ui:define>
-            
+
             <ui:define name="title">Calendario - CreativeMeetings</ui:define>
 
             <ui:define name="logoempresa">
