--- a/trunk/web/vernotificaciones-ae.xhtml
+++ b/trunk/web/vernotificaciones-ae.xhtml
@@ -18,19 +18,16 @@
             <ui:define name="title">Ver Notificaciones - CreativeMeetings</ui:define>
 
             <ui:define name="logoempresa">
-
             </ui:define>
 
             <ui:define name="left">
-
             </ui:define>
 
             <ui:define name="right">
-
             </ui:define>
 
             <ui:define name="content">
-
+                <h2 class="sectiontittle">Ver notificaciones</h2>
 
                 <ice:form>
                     <ice:panelGroup rendered="#{privilegiosBean.compruebaPrivilegiosSesion()==1}">
