--- a/trunk/web/desarrolloreunion.xhtml
+++ b/trunk/web/desarrolloreunion.xhtml
@@ -89,17 +89,19 @@
                         </ice:column>
                         <ice:column>
                             <f:facet name="header">Salario</f:facet>    
-                            <ice:outputText styleClass="apellido2asist" value="#{asistentes.salario}" />
+                            <ice:outputText styleClass="salarioasist" value="#{asistentes.salario}" />
                         </ice:column>
                         <ice:column>
                             <f:facet name="header">Coste</f:facet>
-                            <ice:outputText styleClass="apellido2asist" value="0€" />
+                            <ice:outputText styleClass="costeasist #{asistentes.nif.nif}" value="0" />
                         </ice:column>
 
                     </ice:dataTable>
+                    
                     <script type="text/javascript">
                        diferenciarestante();
                        contador();
+                       costes();
                     </script>
 
 
