--- a/trunk/web/home.xhtml
+++ b/trunk/web/home.xhtml
@@ -18,17 +18,11 @@
                 Inicio - CreativeMeetings
             </ui:define>
 
-            <ui:define name="logoempresa">
-                logoempresa
-            </ui:define>
+            <ui:define name="logoempresa"></ui:define>
 
-            <ui:define name="left">
+            <ui:define name="left"></ui:define>
 
-            </ui:define>
-
-            <ui:define name="right">
-
-            </ui:define>
+            <ui:define name="right"></ui:define>
 
             <ui:define name="content">
                 <h2 class="sectiontittle">Inicio</h2>
