--- a/trunk/web/registrousuario.xhtml
+++ b/trunk/web/registrousuario.xhtml
@@ -2,9 +2,6 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:icecore="http://www.icefaces.org/icefaces/core"
-      xmlns:ace="http://www.icefaces.org/icefaces/components"
       xmlns:ice="http://www.icesoft.com/icefaces/component"
       xmlns:f="http://java.sun.com/jsf/core">
 
@@ -15,121 +12,127 @@
             </ui:define>
 
             <ui:define name="logoempresa">
-                logoempresa
             </ui:define>
 
             <ui:define name="left">
-                left
             </ui:define>
 
             <ui:define name="right">
-                right
             </ui:define>
 
             <ui:define name="content">
-                <div class="formulario" id="formularioempresa">
-                    <div class="encabezado"><h1>Registro de usuario</h1></div>
-                    <div>
-                        <ice:form>
-                            <table class="tablaformulario" id="tablaempresa">
+                <div class="logindiv" id="formularioempresa">
+                    <div class="encabezado" id="iniciosesion"><h2>Registro de usuario</h2></div>
+                    <div class="cuerpo">
+
+                        <table class="tablaformulario" id="tablaempresa">
+                            <ice:form>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="nombre">Nombre:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="nombre" value="#{usuario.nombre}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errornombre" for="nombre"></ice:message></div></td>
+                                    <td><ice:outputLabel for="nombre">Nombre:</ice:outputLabel></td>
+                                    <td><ice:inputText id="nombre" value="#{registroBean.nombre}" required="true" validator="#{validaciones.validarCadena255}" /></td>
+                                    <td><ice:message id="errornombre" for="nombre"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="apellido1">Primer apellido:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="apellido1"  value="#{usuario.apellido1}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorapellido1" for="apellido1"></ice:message></div></td>
+                                    <td><ice:outputLabel for="apellido1">Primer apellido:</ice:outputLabel></td>
+                                    <td><ice:inputText id="apellido1"  value="#{registroBean.apellido1}" required="true" validator="#{validaciones.validarCadena255}" /></td>
+                                    <td><ice:message id="errorapellido1" for="apellido1"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="apellido2">Segundo apellido:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="apellido2" value="#{usuario.apellido2}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorapellido2" for="apellido2"></ice:message></div></td>
+                                    <td><ice:outputLabel for="apellido2">Segundo apellido:</ice:outputLabel></td>
+                                    <td><ice:inputText id="apellido2" value="#{registroBean.apellido2}" /></td>
+                                    <td><ice:message id="errorapellido2" for="apellido2"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="dni">DNI:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="dni" value="#{usuario.dni}" required="true" validator="#{validaciones.validarNif}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errordni" for="dni"></ice:message></div></td>
+                                    <td><ice:outputLabel for="dni">DNI:</ice:outputLabel></td>
+                                    <td><ice:inputText id="dni" value="#{registroBean.dni}" required="true" validator="#{validaciones.validarNif}" /></td>
+                                    <td><ice:message id="errordni" for="dni"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="nif">N.I.F. de la empresa:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="nif" value="#{usuario.niftmp}" required="true" validator="#{validaciones.validarNifUsuario}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errornif" for="nif"></ice:message></div></td>
+                                    <td><ice:outputLabel for="nif">N.I.F. de la empresa:</ice:outputLabel></td>
+                                    <td><ice:inputText id="nif" value="#{registroBean.niftmp}" required="true" validator="#{validaciones.validarNifUsuario}"></ice:inputText></td>
+                                    <td><ice:message id="errornif" for="nif"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="fechanacimiento">Fecha de nacimiento:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:selectInputDate id="fechanacimiento" value="#{usuario.fechanacimiento}" required="true" renderAsPopup="true" renderMonthAsDropdown="true" renderYearAsDropdown="true"><f:converter converterId="javax.faces.DateTime"/> 
-                                                <f:convertDateTime pattern="dd/MM/yyyy"/></ice:selectInputDate></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorfechanacimiento" for="fechanacimiento"></ice:message></div></td>
+                                    <td><ice:outputLabel for="fechanacimiento">Fecha de nacimiento:</ice:outputLabel></td>
+                                    <td><ice:selectInputDate id="fechanacimiento" value="#{registroBean.fechanacimiento}" required="true" renderAsPopup="true" renderMonthAsDropdown="true" renderYearAsDropdown="true"><f:converter converterId="javax.faces.DateTime"/> 
+                                            <f:convertDateTime pattern="dd/MM/yyyy"/></ice:selectInputDate></td>
+                                    <td><ice:message id="errorfechanacimiento" for="fechanacimiento"></ice:message></td>
 
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="direccionusuario">Direcci&oacute;n:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="direccionusuario" value="#{usuario.direccion}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errordireccionusuario" for="direccionusuario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="direccionusuario">Direcci&oacute;n:</ice:outputLabel></td>
+                                    <td><ice:inputText id="direccionusuario" value="#{registroBean.direccion}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></td>
+                                    <td><ice:message id="errordireccionusuario" for="direccionusuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="localidadusuario">Localidad:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="localidadusuario" value="#{usuario.localidad}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorlocalidadusuario" for="localidadusuario"></ice:message></div></td>
-                                </tr>
-
-                                <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="codigopostalusuario">C&oacute;digo postal:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="codigopostalusuario" value="#{usuario.codigopostal}" required="true" validator="#{validaciones.validarCodigoPostal}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorcodigopostalusuario" for="codigopostalusuario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="localidadusuario">Localidad:</ice:outputLabel></td>
+                                    <td><ice:inputText id="localidadusuario" value="#{registroBean.localidad}" required="true" validator="#{validaciones.validarCadena255}" /></td>
+                                    <td><ice:message id="errorlocalidadusuario" for="localidadusuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="provinciausuario">Provincia:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="provinciausuario" value="#{usuario.provincia}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorprivinciausuario" for="provinciausuario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="codigopostalusuario">C&oacute;digo postal:</ice:outputLabel></td>
+                                    <td><ice:inputText id="codigopostalusuario" value="#{registroBean.codigopostal}" required="true" validator="#{validaciones.validarCodigoPostal}" /></td>
+                                    <td><ice:message id="errorcodigopostalusuario" for="codigopostalusuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="pais">Pa&iacute;s:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:selectOneMenu id="pais" value="#{usuario.pais}" partialSubmit="false">
-                                                <f:selectItems id="listapaisesemp" value="#{listapaises.paises}"/>
-                                            </ice:selectOneMenu></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorpais" for="paisusuario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="provinciausuario">Provincia:</ice:outputLabel></td>
+                                    <td><ice:inputText id="provinciausuario" value="#{registroBean.provincia}" required="true" validator="#{validaciones.validarCadena255}" /></td>
+                                    <td><ice:message id="errorprivinciausuario" for="provinciausuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="telefonousuario">Tel&eacute;fono:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="telefonousuario" value="#{usuario.telefono}" validator="#{validaciones.validarTelefono}" required="true"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errortelefonousuario" for="telefonousuario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="pais">Pa&iacute;s:</ice:outputLabel></td>
+                                    <td><ice:selectOneMenu id="pais" value="#{registroBean.pais}" partialSubmit="false">
+                                            <f:selectItems id="listapaisesemp" value="#{listapaises.paises}"/>
+                                        </ice:selectOneMenu></td>
+                                    <td><ice:message id="errorpais" for="paisusuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="movil">Tel&eacute;fono m&oacute;vil:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="movil" value="#{usuario.movil}" validator="#{validaciones.validarMovil}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errormovil" for="movil"></ice:message></div></td>
+                                    <td><ice:outputLabel for="telefonousuario">Tel&eacute;fono:</ice:outputLabel></td>
+                                    <td><ice:inputText id="telefonousuario" value="#{registroBean.telefono}" validator="#{validaciones.validarTelefono}" required="true" /></td>
+                                    <td><ice:message id="errortelefonousuario" for="telefonousuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="emailusuario">Correo electr&oacute;nico:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="emailusuario" value="#{usuario.email}" required="true" validator="#{validaciones.validarEmail}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="erroremailusuario" for="emailusuario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="movil">Tel&eacute;fono m&oacute;vil:</ice:outputLabel></td>
+                                    <td><ice:inputText id="movil" value="#{registroBean.movil}" validator="#{validaciones.validarMovil}" /></td>
+                                    <td><ice:message id="errormovil" for="movil"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="cargo">Cargo:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="cargo" value="#{usuario.cargo}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorcargo" for="cargo"></ice:message></div></td>
+                                    <td><ice:outputLabel for="emailusuario">Correo electr&oacute;nico:</ice:outputLabel></td>
+                                    <td><ice:inputText id="emailusuario" value="#{registroBean.email}" required="true" validator="#{validaciones.validarEmail}"></ice:inputText></td>
+                                    <td><ice:message id="erroremailusuario" for="emailusuario"></ice:message></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="salario">Salario mensual:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="salario" value="#{usuario.salario}" required="true" validator="#{validaciones.validarSalario}"></ice:inputText></div></td>
-                                    <td><div class="errorformulario"><ice:message id="errorsalario" for="salario"></ice:message></div></td>
+                                    <td><ice:outputLabel for="cargo">Cargo:</ice:outputLabel></td>
+                                    <td><ice:inputText id="cargo" value="#{registroBean.cargo}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></td>
+                                    <td><ice:message id="errorcargo" for="cargo"></ice:message></td>
+                                </tr>
+                                <tr>
+                                    <td><ice:outputLabel for="salario">Salario mensual:</ice:outputLabel></td>
+                                    <td><ice:inputText id="salario" value="#{registroBean.salario}" required="true" validator="#{validaciones.validarSalario}"></ice:inputText></td>
+                                    <td><ice:message id="errorsalario" for="salario"></ice:message></td>
                                 </tr>
                                 <tr>
                                     <td colspan="2"><hr/></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">
-                                        <ice:commandButton id="botondardealta" value="Dar de alta" action="#{registroBean.registraUsuario}"></ice:commandButton>
+
+                                    <td colspan="2" class="tdcenter">
+                                        <ice:commandButton styleClass="btn" id="botondardealta" value="Registrarse" action="#{registroBean.registraUsuario}" />
                                     </td>
                                 </tr>
-                            </table>
+                            </ice:form>
+                            <tr>
+                                <td colspan="2" class="tdcenter">
+                                    <ice:form>
+                                        <ice:commandButton styleClass="btn" value="Volver" action="#{registroBean.volver}" partialSubmit="false" />
+                                    </ice:form>
+                                </td>
+                            </tr>
+                        </table>
 
-                        </ice:form>
                     </div>
                 </div>
+
             </ui:define>
 
         </ui:composition>
